[project]
name = "rextlib"
version = "0.0.0"
classifiers = [
    "Private :: Do Not Upload",
    "Topic :: Utilities",
    "Typing :: Typed",
    "Framework :: AsyncIO"
]
dependencies = [
    "aiomysql~=0.2.0",
    "cryptography~=41.0.1",
    "orjson~=3.9.2",
    "aiofiles~=23.1.0",
    "psutil~=5.9.5",
]
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
